[project]
name = "pylhb"
version = "1.8.6"
description = "Mr.Lee's Helpers"
readme = "README.md"
license = {file = "LICENSE"} 
authors = [
    { name = "SoftGod4MrLi", email = "596928288@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyodbc>=5.3.0",
    "requests>=2.33.1",
]

[project.urls]
Homepage = "https://github.com/SoftGod4MrLi/pylhb"
Documentation = "https://github.com/SoftGod4MrLi/pylhb"
Repository = "https://github.com/SoftGod4MrLi/pylhb"
Issues = "https://github.com/SoftGod4MrLi/pylhb/issues"

[project.scripts]
pylhb = "pylhb:main"

[build-system]
requires = ["uv_build>=0.9.0,<100.0.0"]
build-backend = "uv_build"
